load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutil",
    srcs = ["testutil.go"],
    importpath = "github.com/twistedogic/spero/pkg/store/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/store",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
